# multiplayer

./: .gitignore  Cargo.toml  README.md
player/: Cargo.toml
player/src/: audio.rs  connection.rs  dnd_resolver.rs  gui.rs  key.rs  lrc.rs  main.rs  preferences.rs  state.rs  transmit.rs
player/src/gui/: bitrate_bar.rs  connection_window.rs  context_menu.rs  group_box.rs  lyric_window.rs  main_window.rs  marquee_label.rs  play_status.rs  preferences_window.rs  queue_window.rs  visualizer.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  network.rs
server/: Cargo.toml
server/src/: connection.rs  main.rs  peer.rs  room.rs
