[package]
name = "protocol"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
bincode = "1.3.3"
bytes = "1.4.0"
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["net"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
